# alchemd

./: .gitignore  NOTICE  README.md  alchemd.bat.template  pyproject.toml
alchemd/: __init__.py  __main__.py  chunking.py  cli.py  driver.py  engine_runner.py  env.py  postprocess.py  preflight.py  quality.py  router.py  sanitize.py  slicing.py  ui.py
alchemd/engines/: base.py  docling.py  marker.py  mineru.py  subprocess_engine.py
docs/: pipeline-eval-findings.md  pipeline-evaluation.md  pipeline-fixes.md
scripts/: merge_marker_parts.py  slice_pdf.py
tests/: conftest.py  test_chunking.py  test_cli.py  test_driver.py  test_e2e.py  test_engine_docling.py  test_engine_marker.py  test_engine_mineru.py  test_engine_runner.py  test_engines_base.py  test_env.py  test_phase1_fixes.py  test_phase2_fixes.py  test_postprocess.py  test_preflight.py  test_quality.py  test_router.py  test_sanitize.py  test_slicing.py  test_subprocess_engine.py  test_ui.py
